Dummy looks at player on spawn, Dummy spawns on mousePosition (smartcast), MousePositionOnTerrain static class made to get RaycastHit anywhere

--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -488,6 +488,7 @@
     <Compile Include="Assets\Scripts\Managers\MainMenuManager.cs" />
     <Compile Include="Assets\Scripts\Managers\NetworkManager.cs" />
     <Compile Include="Assets\Scripts\Managers\StaticObjects.cs" />
+    <Compile Include="Assets\Scripts\MousePositionOnTerrain.cs" />
     <Compile Include="Assets\Scripts\MovementCapsule\MovementCapsule.cs" />
     <Compile Include="Assets\Scripts\Terrain\TerrainManager.cs" />
   </ItemGroup>
