--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -438,13 +438,13 @@
     <Compile Include="Assets\PUN\Plugins\WebSocket\WebSocket.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\Ability.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\DestroyAllDummies.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SpawnAllyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SpawnDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SpawnEnemyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\TeleportToMid.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEnums\CharacterAbilities.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEnums\OtherAbilities.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\DestroyAllDummies.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnAllyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnEnemyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\TeleportToMid.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterBase.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterInput.cs" />
