--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -438,28 +438,49 @@
     <Compile Include="Assets\PUN\Plugins\WebSocket\WebSocket.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\Ability.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEnums\CharacterAbilities.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEnums\OtherAbilities.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType\AbilityType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType\Blink.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType\Dash.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType\SkillShot.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityAffectedUnitType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AbilityEffect.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffect.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffectCollider.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileDirectionTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileMultipleTargets.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileSingleTarget.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileUnitTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffectType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityInput.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargetedBlink.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedDash.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargetedProjectile.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\GroundTargeted\GroundTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\GroundTargeted\GroundTargetedBlink.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\PassiveTargeted\PassiveTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\SelfTargeted\SelfTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\UnitTargeted\UnitTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_E.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_Q.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_R.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_W.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_E.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_Q.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_R.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\DamageType.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\DestroyAllDummies.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\Heal.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnAllyDummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnDummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnEnemyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\Teleport.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\TeleportToMid.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Teleport.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityManager.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\CharacterBase.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\CharacterActionManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterInput.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\CharacterMouseManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterMovement.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterOrientation.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\Character.cs" />
@@ -475,9 +496,12 @@
     <Compile Include="Assets\Scripts\Entities\Dummy\Dummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\DummyBaseStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\DummyStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\Entity.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityType.cs" />
     <Compile Include="Assets\Scripts\Entities\Minion\MinionStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Monster\MonsterStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\MouseEvent.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\AbilityPower.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Armor.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\ArmorPenetration.cs" />
@@ -503,22 +527,20 @@
     <Compile Include="Assets\Scripts\Entities\Stats\Resources\Mana.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Resources\ManaRegeneration.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\SpellVamp.cs" />
+    <Compile Include="Assets\Scripts\Entities\Stats\Stat.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Tenacity.cs" />
     <Compile Include="Assets\Scripts\Managers\MainMenuManager.cs" />
     <Compile Include="Assets\Scripts\Managers\NetworkManager.cs" />
     <Compile Include="Assets\Scripts\Managers\StaticObjects.cs" />
     <Compile Include="Assets\Scripts\MousePositionOnTerrain.cs" />
     <Compile Include="Assets\Scripts\MovementCapsule\MovementCapsule.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\AreaOfEffect.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\AreaOfEffectCollider.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\Projectile.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\ProjectileDirectionTargetted.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\ProjectileMovement.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\ProjectileMultipleTargets.cs" />
-    <Compile Include="Assets\Scripts\Projectiles\ProjectileSingleTarget.cs" />
+    <Compile Include="Assets\Scripts\Range.cs" />
+    <Compile Include="Assets\Scripts\TargetIsValid.cs" />
     <Compile Include="Assets\Scripts\Terrain\TerrainManager.cs" />
+    <Compile Include="Assets\Scripts\UI\AbilityUI\AbilityUIManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Materials\UI\Grayscale.shader" />
     <None Include="Assets\PUN\Photon Unity Networking\Demos\DemoBoxes\Resources\eurof_tt.txt" />
     <None Include="Assets\PUN\Photon Unity Networking\Demos\DemoRockPaperScissors\Assets\OpenSans\Apache License.txt" />
     <None Include="Assets\PUN\Photon Unity Networking\Demos\MarcoPolo-Tutorial\marcopolo-readme.txt" />
