--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -16,7 +16,7 @@
     <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
-    <UnityVersion>2017.3.0f3</UnityVersion>
+    <UnityVersion>2017.3.1f1</UnityVersion>
     <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
@@ -27,7 +27,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Debug\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_1;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -37,7 +37,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Release\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU</DefineConstants>
+    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_1;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
@@ -437,6 +437,7 @@
     <Compile Include="Assets\PUN\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\PUN\Plugins\WebSocket\WebSocket.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
+    <Compile Include="Assets\Scripts\Entities\Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\Ability.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityAffectedUnitType.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AbilityEffect.cs" />
@@ -459,6 +460,8 @@
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\PassiveTargeted\PassiveTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\SelfTargeted\SelfTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\UnitTargeted\UnitTargeted.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\_Character\Recall.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_E.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_Q.cs" />
@@ -474,30 +477,39 @@
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnAllyDummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnDummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnEnemyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\TeleportToMid.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Flash.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Teleport.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterActionManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterInput.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\CharacterLevelManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterMouseManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterMovement.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterOrientation.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\Character.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterBaseStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\Ezreal.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealBaseStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\Lucian.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianBaseStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianStats.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\CharacterStatsController.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\CharacterStatsManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\Dummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\DummyBaseStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\Dummy\DummyBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Dummy\DummyStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Entity.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityBaseStats.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityBasicAttack.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityBasicAttackCycle.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityBuffManager.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityStats.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityType.cs" />
     <Compile Include="Assets\Scripts\Entities\Minion\MinionStats.cs" />
@@ -505,18 +517,18 @@
     <Compile Include="Assets\Scripts\Entities\MouseEvent.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\AbilityPower.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Armor.cs" />
-    <Compile Include="Assets\Scripts\Entities\Stats\ArmorPenetration.cs" />
+    <Compile Include="Assets\Scripts\Entities\Stats\ArmorPenetrationPercent.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\AttackDamage.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\AttackRange.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\AttackSpeed.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\CooldownReduction.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\CriticalStrikeChance.cs" />
-    <Compile Include="Assets\Scripts\Entities\Stats\EntityBaseStats.cs" />
-    <Compile Include="Assets\Scripts\Entities\Stats\EntityStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Health.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\HealthRegeneration.cs" />
+    <Compile Include="Assets\Scripts\Entities\Stats\Lethality.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\LifeSteal.cs" />
-    <Compile Include="Assets\Scripts\Entities\Stats\MagicPenetration.cs" />
+    <Compile Include="Assets\Scripts\Entities\Stats\MagicPenetrationFlat.cs" />
+    <Compile Include="Assets\Scripts\Entities\Stats\MagicPenetrationPercent.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\MagicResistance.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\MovementSpeed.cs" />
     <Compile Include="Assets\Scripts\Entities\Stats\Resource.cs" />
@@ -538,7 +550,13 @@
     <Compile Include="Assets\Scripts\Range.cs" />
     <Compile Include="Assets\Scripts\TargetIsValid.cs" />
     <Compile Include="Assets\Scripts\Terrain\TerrainManager.cs" />
-    <Compile Include="Assets\Scripts\UI\AbilityUI\AbilityUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\AbilityLevelUpUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\AbilityTimeBarUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\AbilityUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\BuffUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\LevelUIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\UIAbility.cs" />
+    <Compile Include="Assets\Scripts\UI\UILevelUpArrow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Materials\UI\Grayscale.shader" />
