Stats and Abilities are added to game objects automatically

--- a/LoL_Sandbox.csproj
+++ b/LoL_Sandbox.csproj
@@ -440,6 +440,8 @@
     <Compile Include="Assets\Scripts\Entities\Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\Ability.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityAffectedUnitType.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityBuff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityCategory.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AbilityEffect.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffect.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\AreaOfEffect\AreaOfEffectCollider.cs" />
@@ -449,7 +451,6 @@
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileSingleTarget.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffect\Projectiles\ProjectileUnitTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityEffectType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityInput.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\AutoTargeted\AutoTargetedBlink.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\DirectionTargeted\DirectionTargeted.cs" />
@@ -462,28 +463,37 @@
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityTargeting\UnitTargeted\UnitTargeted.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\AbilityType.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\_Character\Recall.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\_Character\Recall_Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_E.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_P_Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_Q.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_R.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Ezreal\Ezreal_W_Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_E.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_P_Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_Q.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_R.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\Lucian\Lucian_W_Debuff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_E.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_P.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_P_Buff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_Q.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_R.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\CharacterAbilities\MissFortune\MissFortune_W.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\DamageType.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\DestroyAllDummies.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnAllyDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnDummy.cs" />
-    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OtherAbilities\SpawnEnemyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\DestroyAllDummies.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnAllyDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnDummy.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\OfflineAbilities\SpawnEnemyDummy.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Flash.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal_Buff.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Heal_Debuff.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Abilities\SummonerAbilities\Teleport.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\CharacterBufferedAbilityManager.cs" />
@@ -497,14 +507,17 @@
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\_Character\CharacterStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\Ezreal.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealBaseStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Ezreal\EzrealStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\Lucian.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianBaseStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\Lucian\LucianStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortune.cs" />
+    <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneAbilityManager.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneBaseStats.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneBasicAttack.cs" />
     <Compile Include="Assets\Scripts\Entities\Character\Characters\MissFortune\MissFortuneStats.cs" />
